--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,4 +13,5 @@
   <string name="menu_tools">Tools</string>
   <string name="menu_share">Share</string>
   <string name="menu_send">Send</string>
+  <string name="error_desc">A temporary error has occurred. Click on the screen to restart the app.</string>
 </resources>
