--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,11 +7,12 @@
   <string name="nav_header_desc">Navigation header</string>
   <string name="action_settings">Settings</string>
 
-  <string name="menu_home">Home</string>
-  <string name="menu_gallery">Gallery</string>
+  <string name="menu_help">Help</string>
+  <string name="menu_opensource">Opensource license</string>
   <string name="menu_slideshow">Slideshow</string>
   <string name="menu_tools">Tools</string>
-  <string name="menu_share">Share</string>
+  <string name="menu_share">앱공유</string>
   <string name="menu_send">Send</string>
   <string name="error_desc">A temporary error has occurred. Click on the screen to restart the app.</string>
+  <string name="menu_review">리뷰남기기</string>
 </resources>
