--- a/app/src/main/res/values-ko/strings.xml
+++ b/app/src/main/res/values-ko/strings.xml
@@ -1,14 +1,14 @@
 <resources>
-  <string name="app_name">Shortcuts</string>
+  <string name="app_name">단축키 모음</string>
   <string name="navigation_drawer_open">Open navigation drawer</string>
   <string name="navigation_drawer_close">Close navigation drawer</string>
-  <string name="nav_header_title">Android Studio</string>
-  <string name="nav_header_subtitle">android.studio@android.com</string>
+  <string name="nav_header_title">단축키 모음</string>
+  <string name="nav_header_subtitle">ovsoc@daum.net</string>
   <string name="nav_header_desc">Navigation header</string>
 
-  <string name="menu_opensource">Opensource license</string>
+  <string name="menu_opensource">오픈소스 라이선스</string>
   <string name="menu_share">앱공유</string>
-  <string name="error_desc">A temporary error has occurred. Click on the screen to restart the app.</string>
+  <string name="error_desc">일시적인 에러입니다. 다시 시작하려면 화면을 눌러주세요.</string>
   <string name="menu_review">리뷰남기기</string>
-  <string name="nav_communication">Communication</string>
+  <string name="nav_communication">커뮤니케이션</string>
 </resources>
