--- a/app/src/main/res/values-zh/strings.xml
+++ b/app/src/main/res/values-zh/strings.xml
@@ -1,14 +1,14 @@
 <resources>
-  <string name="app_name">Shortcuts</string>
+  <string name="app_name">快捷方式集合</string>
   <string name="navigation_drawer_open">Open navigation drawer</string>
   <string name="navigation_drawer_close">Close navigation drawer</string>
-  <string name="nav_header_title">Android Studio</string>
-  <string name="nav_header_subtitle">android.studio@android.com</string>
+  <string name="nav_header_title">快捷方式集合</string>
+  <string name="nav_header_subtitle">ovsoc@daum.net</string>
   <string name="nav_header_desc">Navigation header</string>
 
   <string name="menu_opensource">Opensource license</string>
-  <string name="menu_share">앱공유</string>
-  <string name="error_desc">A temporary error has occurred. Click on the screen to restart the app.</string>
-  <string name="menu_review">리뷰남기기</string>
-  <string name="nav_communication">Communication</string>
+  <string name="menu_share">应用分享</string>
+  <string name="error_desc">发生了临时错误。 单击屏幕以重新启动应用程序。</string>
+  <string name="menu_review">发表评论</string>
+  <string name="nav_communication">通讯</string>
 </resources>
